[project]
name = "remote-mcp-server"
version = "0.1.0"
description = "Remote MCP Server"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "markitdown",
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "fastmcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastMcp"]
